# pydactory

./: .flake8  .gitignore  LICENSE.txt  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
pydactory/: __init__.py  errors.py  fake.py  gen.py  params.py  pydactory.py  types.py
tests/: console.py  support.py  test_pydactory.py
