[tool.poetry]
name = "pydactory"
version = "0.1.0"
description = ""
authors = ["Richard Howard <richard@promptworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
faker = "^4.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
ipython = "^7.19.0"
ipdb = "^0.13.4"
isort = "^5.6.4"
mypy = "^0.790"
sphinx = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
